--- a/src/App.css
+++ b/src/App.css
@@ -41,11 +41,8 @@ footer {
 }
 
 .config-form {
-  margin-top: 40px;
-  padding-top: 20px;
-  border-top: 1px solid #ddd;
+  margin: 0 0 40px;
 }
-
 .config-form form {
   display: flex;
   flex-direction: column;
